# File_Storage_Server_LRU

./: CMakeLists.txt  Makefile  client.c  config.txt  server  server.c  statistiche.sh  toZipAll.sh
includes/: Client_API.h  FileStorageServer.h  Server_API.h  file.h  icl_hash.h  logFile.h  queue.h  threadPool.c  threadPool.h  utils.h
includes/API/: Client_API.c  Server_API.c
includes/File/: file.c
includes/FileStorageServer/: FileStorageServer.c
includes/hashTable/: icl_hash.c
includes/logFile/: logFile.c
includes/queue/: queue.c
includes/threadPool/: threadPool.c
includes/utils/: utils.c
test1/: config.txt  startClient.sh
test1/client/: test1_file1.txt
test1/client/send/: 3  4  8
test1/tmp1/: 1  2
test2/: config.txt  startClient.sh
test2/1/: 10  2  3  4  5
test2/2/: 16  18
test2/3/: 22  24  25  30
test2/4/: 32  38
test2/5/: 41  42  44  45  47  48  49
test2/extra/: 1  10  11  12  13  14  15  16  17  18  19  2  20  3  4  5  6  7  8  9
test2/tmp/: 1  11  12  13  14  15  17  19  20  21  23  26  27  28  29  31  33  34  35  36  37  39  40  43  46  50  6  7  8  9
test3/: config.txt  startClient.sh
test3/extra/: 10  103  104  105  107  109  111  112  113  114  117  12  121  124  125  128  129  130  131  132  135  139  14  141  143  145  15  152  154  155  157  16  165  17  170  175  176  178  179  180  (+363 more)
test3/save/: 100  101  102  106  108  11  110  115  116  118  119  120  122  123  126  127  13  133  134  136  137  138  140  142  144  146  147  148  149  150  151  153  156  158  159  160  161  162  163  164  (+52 more)
